Bugfix Headersize on mobile

--- a/src/comp/Header.css
+++ b/src/comp/Header.css
@@ -47,6 +47,12 @@ header {
   }
 }
 
+@media (max-width:450px) {
+  .main-list {
+    padding: 10px 12px;
+  }
+}
+
 /* ==================
     Languages
 ===================== */
